# my-simple-redis

./: pyproject.toml  pytest.ini
base/: __init__.py
core/: base.py  json.py
tests/: __init__.py
