[tool.poetry]
name = "my-redis"
version = "0.1.0"
description = ""
authors = ["KimGyeongMin-KR <gyeongmin951@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.4"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
